# gravitylegacy

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  build.gradle  gravity.pro  gravityConfig.h  gravityConfig.h.in  main.cpp
gravity/: CMakeLists.txt  gravity.pro  gravity.sln  main.cpp  tutorial.cpp
gravity/gravity/: Makefile  gravity.vcxproj  main.cpp
gravity/solver/: euler.cpp  euler.h  solver.h  solver.pro
gravity/ui/: ui.pro
gravity/utils/: particle.h  utils.pro
gui/: gui.pro
headers/: particles.h
solver/: CMakeLists.txt  euler.cpp  euler.h  solver.cpp  solver.h  solver.pro  solverConfig.h.in  solver_global.h
solverBenchmark/: solverBenchmark.pro  tst_solverbenchmark.cpp
solverTest/: solverTest.pro  tst_solvertest.cpp
src/main/cpp/: main.cpp
testUtils/: testUtils.pro  testutils.h
utils/: CMakeLists.txt  constants.h  particlebuilder.h  particlebuilderimpl.cpp  particlebuilderimpl.h  particles.h  utils.pro
utilsTest/: tst_utilstest.cpp  utilsTest.pro
